@@ -541,7 +541,10 @@ public class GUIUtilities
 	 * Displays a VFS file selection dialog box.
 	 * @param view The view
 	 * @param path The initial directory to display. May be null
-	 * @param type The dialog type
+	 * @param type The dialog type. One of
+	 * <code>VFSBrowser.OPEN_DIALOG</code>,
+	 * <code>VFSBrowser.SAVE_DIALOG</code>, or
+	 * <code>VFSBrowser.CHOOSE_DIRECTORY_DIALOG</code>.
 	 * @param multipleSelection True if multiple selection should be allowed
 	 * @return The selected file(s)
 	 * @since jEdit 2.6pre2
